feat: add controller and dao for workout plan management